--- a/Projeto 4 bimestre/WpfApp1/MainWindow.xaml
+++ b/Projeto 4 bimestre/WpfApp1/MainWindow.xaml
@@ -6,9 +6,14 @@
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="Lan Master" Height="400" Width="350">
-    <Grid>
+    <Grid Margin="10,0,10,0">
         <TextBlock FontSize="25" Margin="0,20,0,0" Text="Lan Master" VerticalAlignment="Top" HorizontalAlignment="Center"/>
         <TextBlock FontSize="18" Margin="0,61,0,0" Text="Login " VerticalAlignment="Top" HorizontalAlignment="Center"/>
+        <GroupBox Header="Usuário" Margin="0,89,0,214" Width="266" HorizontalAlignment="Center">
+            <TextBox BorderThickness="0" BorderBrush="Transparent" TextAlignment="Center"/>
+        </GroupBox>
+        <Button x:Name="button1" Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Criar conta" HorizontalAlignment="Left" Margin="28,190,0,0" VerticalAlignment="Top" Width="75" MouseEnter="teste"/>
+        <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Próximo" HorizontalAlignment="Left" Margin="219,190,0,0" VerticalAlignment="Top" Width="75"/>
 
     </Grid>
 </Window>
