--- a/Projeto 4 bimestre/WpfApp1/MainWindow.xaml
+++ b/Projeto 4 bimestre/WpfApp1/MainWindow.xaml
@@ -5,15 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Lan Master" Height="400" Width="350">
-    <Grid Margin="10,0,10,0">
+        Title="Lan Master" Height="400" Width="350" ResizeMode="NoResize" Visibility="Visible" Foreground="White">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="#FF28288B"/>
+            <GradientStop Color="#FF2252D1" Offset="1"/>
+        </LinearGradientBrush>
+    </Window.Background>
+    <Grid Margin="0,0,0,0">
         <TextBlock FontSize="25" Margin="0,20,0,0" Text="Lan Master" VerticalAlignment="Top" HorizontalAlignment="Center"/>
         <TextBlock FontSize="18" Margin="0,61,0,0" Text="Login " VerticalAlignment="Top" HorizontalAlignment="Center"/>
-        <GroupBox Header="Usuário" Margin="0,89,0,214" Width="266" HorizontalAlignment="Center">
-            <TextBox BorderThickness="0" BorderBrush="Transparent" TextAlignment="Center"/>
+        <GroupBox Header="Usuário" Margin="0,89,0,214" Width="266" HorizontalAlignment="Center" BorderThickness="1 1 1 1" BorderBrush="#FF000CFF">
+            <TextBox BorderThickness="0" BorderBrush="Transparent" TextAlignment="Center" Margin="0,10,0,0" Background="Transparent" Foreground="White"/>
         </GroupBox>
-        <Button x:Name="button1" Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Criar conta" HorizontalAlignment="Left" Margin="28,190,0,0" VerticalAlignment="Top" Width="75" MouseEnter="teste"/>
-        <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Próximo" HorizontalAlignment="Left" Margin="219,190,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="button1" Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Criar conta" HorizontalAlignment="Left" Margin="39,190,0,0" VerticalAlignment="Top" Width="75" MouseEnter="teste" Foreground="White"/>
+        <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Próximo" HorizontalAlignment="Left" Margin="230,190,0,0" VerticalAlignment="Top" Width="75" Foreground="White"/>
 
     </Grid>
 </Window>
