--- a/Projeto 4 bimestre/WpfApp1/MainWindow.xaml
+++ b/Projeto 4 bimestre/WpfApp1/MainWindow.xaml
@@ -19,7 +19,7 @@
             <TextBox BorderThickness="0" BorderBrush="Transparent" TextAlignment="Center" Margin="0,10,0,0" Background="Transparent" Foreground="White"/>
         </GroupBox>
         <Button x:Name="button1" Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Criar conta" HorizontalAlignment="Left" Margin="39,190,0,0" VerticalAlignment="Top" Width="75" MouseEnter="teste" Foreground="White"/>
-        <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Próximo" HorizontalAlignment="Left" Margin="230,190,0,0" VerticalAlignment="Top" Width="75" Foreground="White"/>
+        <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Próximo" HorizontalAlignment="Left" Margin="230,190,0,0" VerticalAlignment="Top" Width="75" Foreground="White" Click="Button_Click"/>
 
     </Grid>
 </Window>
