--- a/Projeto 4 bimestre/WpfApp1/MainWindow.xaml
+++ b/Projeto 4 bimestre/WpfApp1/MainWindow.xaml
@@ -16,9 +16,9 @@
         <TextBlock FontSize="25" Margin="0,20,0,0" Text="Lan Master" VerticalAlignment="Top" HorizontalAlignment="Center"/>
         <TextBlock FontSize="18" Margin="0,61,0,0" Text="Login " VerticalAlignment="Top" HorizontalAlignment="Center"/>
         <GroupBox Header="Usuário" Margin="10,144,10,159" HorizontalAlignment="Center" BorderThickness="1 1 1 1" BorderBrush="#FF000CFF" Width="266">
-            <TextBox BorderThickness="0" BorderBrush="Transparent" TextAlignment="Center" Margin="0,10,0,0" Background="Transparent" Foreground="White"/>
+            <TextBox x:Name="loginUsuario" BorderThickness="0" BorderBrush="Transparent" TextAlignment="Center" Margin="0,10,0,0" Background="Transparent" Foreground="White"/>
         </GroupBox>
-        <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Criar conta" HorizontalAlignment="Left" Margin="39,223,0,0" VerticalAlignment="Top" Width="75" MouseEnter="teste" Foreground="White" Click="Button_Criar_Conta"/>
+        <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Criar conta" HorizontalAlignment="Left" Margin="39,223,0,0" VerticalAlignment="Top" Width="75" Foreground="White" Click="Button_Criar_Conta"/>
         <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Próximo" HorizontalAlignment="Left" Margin="230,223,0,0" VerticalAlignment="Top" Width="75" Foreground="White" Click="Button_Click"/>
 
     </Grid>
