--- a/Projeto 4 bimestre/WpfApp1/Page_Cliente.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Page_Cliente.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WpfApp1"
       mc:Ignorable="d" 
-      d:DesignHeight="150" d:DesignWidth="300"
+      d:DesignHeight="200" d:DesignWidth="300"
       Title="Page_Cliente" Foreground="White">
 
     <Grid>
@@ -16,9 +16,10 @@
             </LinearGradientBrush>
         </Grid.Background>
         <TextBlock HorizontalAlignment="Left" Margin="27,30,0,0" TextWrapping="Wrap" Text="Cliente" VerticalAlignment="Top" FontSize="18"/>
-        <Button Background="Transparent" Foreground="White" Content="Listar dados" HorizontalAlignment="Left" Margin="17,83,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Background="Transparent" Foreground="White" Content="Alterar dados" HorizontalAlignment="Left" Margin="110,83,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Background="Transparent" Foreground="White" Content="Listar tempo" HorizontalAlignment="Left" Margin="205,83,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Background="Transparent" Foreground="White" Content="Listar dados" HorizontalAlignment="Left" Margin="10,73,0,0" VerticalAlignment="Top" Width="90"/>
+        <Button Background="Transparent" Foreground="White" Content="Alterar dados" HorizontalAlignment="Left" Margin="105,73,0,0" VerticalAlignment="Top" Width="90"/>
+        <Button Background="Transparent" Foreground="White" Content="Listar tempo" HorizontalAlignment="Left" Margin="200,73,0,0" VerticalAlignment="Top" Width="90"/>
+        <Button Background="Transparent" Foreground="White" Content="Comprar tempo" HorizontalAlignment="Left" Margin="13,139,0,0" VerticalAlignment="Top" Width="90"/>
 
     </Grid>
 </Page>
