--- a/Projeto 4 bimestre/WpfApp1/ChangeAccount.xaml
+++ b/Projeto 4 bimestre/WpfApp1/ChangeAccount.xaml
@@ -1,13 +1,11 @@
-﻿<Page x:Class="WpfApp1.ChangeAccount"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WpfApp1"
-      mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="350"
-      Title="ChangeAccount" Foreground="White">
-
+﻿<Window x:Class="WpfApp1.ChangeAccount"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WpfApp1"
+        mc:Ignorable="d"
+        Title="ChangeAccount" Height="400" Width="350" Foreground="White">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -15,11 +13,11 @@
                 <GradientStop Color="#FF2252D1" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <ListBox HorizontalAlignment="Center" Height="200" Margin="26,190,24,0" VerticalAlignment="Top" Width="300"/>
+        <ListBox HorizontalAlignment="Center" Height="165" Margin="26,190,24,0" VerticalAlignment="Top" Width="300"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,30,0,0" TextWrapping="Wrap" Text="Mudar tipo de conta" VerticalAlignment="Top" FontSize="18"/>
         <Button Background="Transparent" Foreground="White" Content="Alterar conta" HorizontalAlignment="Left" Margin="27,150,0,0" VerticalAlignment="Top" Width="75"/>
         <CheckBox Foreground="White" Content="Cliente" HorizontalAlignment="Left" Margin="26,102,0,0" VerticalAlignment="Top"/>
         <CheckBox Foreground="White" Content="Funcionário" HorizontalAlignment="Left" Margin="122,102,0,0" VerticalAlignment="Top"/>
         <CheckBox Foreground="White" Content="Administrador" HorizontalAlignment="Left" Margin="234,102,0,0" VerticalAlignment="Top"/>
     </Grid>
-</Page>
+</Window>
