--- a/Projeto 4 bimestre/WpfApp1/Inscricao.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Inscricao.xaml
@@ -1,13 +1,11 @@
-﻿<Page x:Class="WpfApp1.Inscricao"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WpfApp1"
-      mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="350"
-      Title="Inscricao" Foreground="White">
-
+﻿<Window x:Class="WpfApp1.Inscricao"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WpfApp1"
+        mc:Ignorable="d"
+        Title="Inscricao" Height="400" Width="350" Foreground="White">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -30,4 +28,4 @@
         <Button Background="Transparent" Content="Concluir" HorizontalAlignment="Left" Margin="230,334,0,0" VerticalAlignment="Top" Width="74" Foreground="White" Click="Button_NewAccount"/>
 
     </Grid>
-</Page>
+</Window>
