--- a/Projeto 4 bimestre/WpfApp1/Login_Senha.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Login_Senha.xaml
@@ -1,12 +1,11 @@
-﻿<Page x:Class="WpfApp1.Login_Senha"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WpfApp1"
-      mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="350"
-      Title="Login_Senha" Foreground="White">
+﻿<Window x:Class="WpfApp1.Login_Senha"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WpfApp1"
+        mc:Ignorable="d"
+        Title="Login_Senha" Height="400" Width="350" Foreground="White">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -14,13 +13,12 @@
                 <GradientStop Color="#FF2252D1" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="E-mail" HorizontalAlignment="Left" Margin="133,103,0,0" VerticalAlignment="Top" Width="75" Foreground="White"/>
+        <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="E-mail" HorizontalAlignment="Left" Margin="133,103,0,0" VerticalAlignment="Top" Width="75" Foreground="White" Click="Voltar_Main"/>
         <TextBlock FontSize="25" Margin="0,20,0,0" Text="Lan Master" VerticalAlignment="Top" HorizontalAlignment="Center"/>
         <TextBlock FontSize="18" Margin="0,61,0,0" Text="Bem-vindo(a)" VerticalAlignment="Top" HorizontalAlignment="Center"/>
         <GroupBox Header="Digite sua senha" Margin="10,144,10,159" HorizontalAlignment="Center" BorderThickness="1 1 1 1" BorderBrush="#FF000CFF" Width="266">
             <TextBox BorderThickness="0" BorderBrush="Transparent" TextAlignment="Center" Margin="0,10,0,0" Background="Transparent" Foreground="White"/>
         </GroupBox>
-        <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Criar conta" HorizontalAlignment="Left" Margin="39,223,0,0" VerticalAlignment="Top" Width="75" Foreground="White"/>
         <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Próximo" HorizontalAlignment="Left" Margin="230,223,0,0" VerticalAlignment="Top" Width="75" Foreground="White" Click="Button_LoginSenha"/>
     </Grid>
-</Page>
+</Window>
