--- a/Projeto 4 bimestre/WpfApp1/Tela_Administrador.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Tela_Administrador.xaml
@@ -1,13 +1,11 @@
-﻿<Page x:Class="WpfApp1.Page_Administrador"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WpfApp1"
-      mc:Ignorable="d" 
-      d:DesignHeight="350" d:DesignWidth="330"
-      Title="Page_Administrador" Foreground="White">
-
+﻿<Window x:Class="WpfApp1.Tela_Administrador"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WpfApp1"
+        mc:Ignorable="d"
+        Title="Tela_Administrador" Height="400" Width="350" Foreground="White">
     <Grid Margin="0,0,0,0">
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -23,4 +21,4 @@
         <Button Background="Transparent" Foreground="White" Content="Alterar dados do cliente" HorizontalAlignment="Left" Margin="91,238,0,0" VerticalAlignment="Top" Width="139" BorderBrush="White"/>
         <Button Background="Transparent" Foreground="White" Content="Alterar dados do funcionário" HorizontalAlignment="Left" Margin="81,272,0,0" VerticalAlignment="Top" Width="160" BorderBrush="White"/>
     </Grid>
-</Page>
+</Window>
