--- a/Projeto 4 bimestre/WpfApp1/Tela_Cliente.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Tela_Cliente.xaml
@@ -1,13 +1,11 @@
-﻿<Page x:Class="WpfApp1.Page_Cliente"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WpfApp1"
-      mc:Ignorable="d" 
-      d:DesignHeight="200" d:DesignWidth="300"
-      Title="Page_Cliente" Foreground="White">
-
+﻿<Window x:Class="WpfApp1.Tela_Cliente"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WpfApp1"
+        mc:Ignorable="d"
+        Title="Tela_Cliente" Height="400" Width="350" Foreground="White">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -20,6 +18,5 @@
         <Button Background="Transparent" Foreground="White" Content="Alterar dados" HorizontalAlignment="Left" Margin="105,73,0,0" VerticalAlignment="Top" Width="90"/>
         <Button Background="Transparent" Foreground="White" Content="Listar tempo" HorizontalAlignment="Left" Margin="200,73,0,0" VerticalAlignment="Top" Width="90"/>
         <Button Background="Transparent" Foreground="White" Content="Comprar tempo" HorizontalAlignment="Left" Margin="13,139,0,0" VerticalAlignment="Top" Width="90"/>
-
     </Grid>
-</Page>
+</Window>
