--- a/Projeto 4 bimestre/WpfApp1/Tela_Administrador.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Tela_Administrador.xaml
@@ -14,11 +14,14 @@
             </LinearGradientBrush>
         </Grid.Background>
         <TextBlock HorizontalAlignment="Left" Margin="27,30,0,0" TextWrapping="Wrap" Text="Administrador" VerticalAlignment="Top" FontSize="18"/>
-        <Button Background="Transparent" Foreground="White" Content="Listar meus dados" HorizontalAlignment="Left" Margin="27,85,0,0" VerticalAlignment="Top" Width="116" BorderBrush="White"/>
-        <Button Background="Transparent" Foreground="White" Content="Alterar meus dados" HorizontalAlignment="Left" Margin="167,85,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
-        <Button Background="Transparent" Foreground="White" Content="Adcionar cliente" HorizontalAlignment="Left" Margin="27,119,0,0" VerticalAlignment="Top" Width="116" BorderBrush="White"/>
-        <Button Background="Transparent" Foreground="White" Content="Adcionar funcionário" HorizontalAlignment="Left" Margin="167,119,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
-        <Button Background="Transparent" Foreground="White" Content="Alterar dados do cliente" HorizontalAlignment="Left" Margin="91,238,0,0" VerticalAlignment="Top" Width="139" BorderBrush="White"/>
-        <Button Background="Transparent" Foreground="White" Content="Alterar dados do funcionário" HorizontalAlignment="Left" Margin="81,272,0,0" VerticalAlignment="Top" Width="160" BorderBrush="White"/>
+        <Button Background="Transparent" Foreground="White" Content="Listar meus dados" HorizontalAlignment="Left" Margin="27,85,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
+        <Button Background="Transparent" Foreground="White" Content="Alterar meus dados" HorizontalAlignment="Left" Margin="27,110,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
+        <Button Background="Transparent" Foreground="White" Content="Adcionar funcionário" HorizontalAlignment="Left" Margin="27,158,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
+        <Button Background="Transparent" Foreground="White" Content="Adcionar cliente" HorizontalAlignment="Left" Margin="27,183,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
+        <Button Background="Transparent" Foreground="White" Content="Gerenciar cliente" HorizontalAlignment="Left" Margin="27,208,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
+        <Button Background="Transparent" Foreground="White" Content="Alterar dados do cliente" HorizontalAlignment="Left" Margin="27,252,0,0" VerticalAlignment="Top" Width="160" BorderBrush="White"/>
+        <Button Background="Transparent" Foreground="White" Content="Alterar dados do funcionário" HorizontalAlignment="Left" Margin="27,277,0,0" VerticalAlignment="Top" Width="160" BorderBrush="White"/>
+        <Button Content="Sair" HorizontalAlignment="Left" Margin="257,339,0,0" VerticalAlignment="Top" Width="75" Click="Button_Sair"/>
+        <Image HorizontalAlignment="Right" Height="100" Margin="0,10,10,0" VerticalAlignment="Top" Width="100"/>
     </Grid>
 </Window>
