--- a/Projeto 4 bimestre/WpfApp1/Login_Senha.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Login_Senha.xaml
@@ -13,11 +13,11 @@
                 <GradientStop Color="#FF2252D1" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="E-mail" HorizontalAlignment="Left" Margin="133,103,0,0" VerticalAlignment="Top" Width="75" Foreground="White" Click="Voltar_Main"/>
+        <Button x:Name="buttonEmail" Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="E-mail" HorizontalAlignment="Left" Margin="133,103,0,0" VerticalAlignment="Top" Width="75" Foreground="White" Click="Voltar_Main"/>
         <TextBlock FontSize="25" Margin="0,20,0,0" Text="Lan Master" VerticalAlignment="Top" HorizontalAlignment="Center"/>
         <TextBlock FontSize="18" Margin="0,61,0,0" Text="Bem-vindo(a)" VerticalAlignment="Top" HorizontalAlignment="Center"/>
         <GroupBox Header="Digite sua senha" Margin="10,144,10,159" HorizontalAlignment="Center" BorderThickness="1 1 1 1" BorderBrush="#FF000CFF" Width="266">
-            <TextBox BorderThickness="0" BorderBrush="Transparent" TextAlignment="Center" Margin="0,10,0,0" Background="Transparent" Foreground="White"/>
+            <TextBox x:Name="senhaUsuario" BorderThickness="0" BorderBrush="Transparent" TextAlignment="Center" Margin="0,10,0,0" Background="Transparent" Foreground="White"/>
         </GroupBox>
         <Button Cursor="Hand" BorderThickness="0" Background="Transparent" BorderBrush="Transparent" Content="Próximo" HorizontalAlignment="Left" Margin="230,223,0,0" VerticalAlignment="Top" Width="75" Foreground="White" Click="Button_LoginSenha"/>
     </Grid>
