--- a/Projeto 4 bimestre/WpfApp1/Comprar_Acesso.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Comprar_Acesso.xaml
@@ -15,8 +15,8 @@
         </Grid.Background>
         <TextBlock HorizontalAlignment="Left" Margin="27,30,0,0" TextWrapping="Wrap" Text="Cliente" VerticalAlignment="Top" FontSize="18"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,67,0,0" TextWrapping="Wrap" Text="Valor da compra" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="27,88,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="27,88,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="104"/>
         <Button Background="Transparent" Foreground="White" Content="Comprar tempo" HorizontalAlignment="Left" Margin="27,122,0,0" VerticalAlignment="Top" Width="104" Height="23"/>
-        <Button Content="Cancelar" HorizontalAlignment="Left" Margin="257,139,0,0" VerticalAlignment="Top" Width="75" Click="Button_Sair"/>
+        <Button Content="Cancelar" HorizontalAlignment="Left" Margin="257,139,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </Window>
