--- a/Projeto 4 bimestre/WpfApp1/Tela_Administrador.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Tela_Administrador.xaml
@@ -19,9 +19,7 @@
         <Button Background="Transparent" Foreground="White" Content="Adcionar funcionário" HorizontalAlignment="Left" Margin="27,158,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
         <Button Background="Transparent" Foreground="White" Content="Adcionar cliente" HorizontalAlignment="Left" Margin="27,183,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
         <Button Background="Transparent" Foreground="White" Content="Gerenciar contas" HorizontalAlignment="Left" Margin="27,208,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
-        <Button Background="Transparent" Foreground="White" Content="Alterar dados do cliente" HorizontalAlignment="Left" Margin="27,252,0,0" VerticalAlignment="Top" Width="160" BorderBrush="White"/>
-        <Button Background="Transparent" Foreground="White" Content="Alterar dados do funcionário" HorizontalAlignment="Left" Margin="27,277,0,0" VerticalAlignment="Top" Width="160" BorderBrush="White"/>
-        <Button Content="Sair" HorizontalAlignment="Left" Margin="257,339,0,0" VerticalAlignment="Top" Width="75" Click="Button_Sair"/>
+        <Button Background="Transparent" Foreground="White" Content="Sair" HorizontalAlignment="Left" Margin="257,208,0,0" VerticalAlignment="Top" Width="75" BorderBrush="White" Click="Button_Sair"/>
         <Image HorizontalAlignment="Right" Height="100" Margin="0,10,10,0" VerticalAlignment="Top" Width="100"/>
     </Grid>
 </Window>
