--- a/Projeto 4 bimestre/WpfApp1/Meus_Dados.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Meus_Dados.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfApp1.Inscricao"
+﻿<Window x:Class="WpfApp1.Meus_Dados"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Inscricao" Height="400" Width="350" Foreground="White">
+        Title="Meus_Dados" Height="392.828" Width="331.557" Foreground="White">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -13,19 +13,18 @@
                 <GradientStop Color="#FF2252D1" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <TextBlock HorizontalAlignment="Left" Margin="27,30,0,0" TextWrapping="Wrap" Text="Crie sua conta na Lan Master" VerticalAlignment="Top" FontSize="18"/>
+        <TextBlock x:Name="IdAccount"/>
+        <TextBlock x:Name="TypeAccount"/>
+        <TextBlock HorizontalAlignment="Left" Margin="27,30,0,0" TextWrapping="Wrap" Text="Meus dados" VerticalAlignment="Top" FontSize="18"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,79,0,0" TextWrapping="Wrap" Text="Nome" VerticalAlignment="Top"/>
         <TextBox x:Name="nomeConta" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,134,0,0" TextWrapping="Wrap" Text="E-mail" VerticalAlignment="Top"/>
         <TextBox x:Name="emailConta" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,155,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,190,0,0" TextWrapping="Wrap" Text="Senha" VerticalAlignment="Top"/>
         <TextBox x:Name="senhaConta" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,211,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Margin="27,243,0,0" TextWrapping="Wrap" Text="Confirmar senha" VerticalAlignment="Top"/>
-        <TextBox x:Name="confSenha" Background="Transparent" HorizontalAlignment="Left" Height="23" Margin="27,264,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Image HorizontalAlignment="Left" Height="100" Margin="214,122,0,0" VerticalAlignment="Top" Width="100"/>
-        <Button Background="Transparent" Content="Inserir foto" HorizontalAlignment="Left" Margin="220,264,0,0" VerticalAlignment="Top" Width="84" Foreground="White" FontSize="16" Height="23" BorderBrush="White"/>
-        <Button Background="Transparent" Content="Calcelar" HorizontalAlignment="Left" Margin="27,334,0,0" VerticalAlignment="Top" Width="75" Foreground="White" BorderBrush="White" Click="Button_Cancelar"/>
-        <Button Background="Transparent" Content="Concluir" HorizontalAlignment="Left" Margin="230,334,0,0" VerticalAlignment="Top" Width="74" Foreground="White" BorderBrush="White" Click="Button_NewAccount"/>
-
+        <Image HorizontalAlignment="Left" Height="100" Margin="206,100,0,0" VerticalAlignment="Top" Width="100"/>
+        <Button Background="Transparent" Content="Inserir foto" HorizontalAlignment="Left" Margin="214,211,0,0" VerticalAlignment="Top" Width="84" Foreground="White" BorderBrush="White" FontSize="16" Height="23"/>
+        <Button Background="Transparent" Content="Alterar dados" HorizontalAlignment="Left" Margin="27,281,0,0" VerticalAlignment="Top" Width="87" Foreground="White" BorderBrush="White" Click="Button_Alterar_Dados"/>
+        <Button Background="Transparent" Content="Concluir" HorizontalAlignment="Left" Margin="224,281,0,0" VerticalAlignment="Top" Width="74" Foreground="White" BorderBrush="White" Click="Button_Fechar"/>
     </Grid>
 </Window>
