--- a/Projeto 4 bimestre/WpfApp1/Tela_Administrador.xaml
+++ b/Projeto 4 bimestre/WpfApp1/Tela_Administrador.xaml
@@ -16,9 +16,9 @@
         <TextBlock x:Name="TypeAccount"/>
         <TextBlock HorizontalAlignment="Left" Margin="19,22,0,0" TextWrapping="Wrap" Text="Administrador" VerticalAlignment="Top" FontSize="18"/>
         <Button Background="Transparent" Foreground="White" Content="Meus dados" HorizontalAlignment="Left" Margin="19,70,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White" Click="Button_Meus_Dados"/>
-        <Button Background="Transparent" Foreground="White" Content="Pedidos de tempo" HorizontalAlignment="Left" Margin="19,118,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
-        <Button Background="Transparent" Foreground="White" Content="Adcionar conta" HorizontalAlignment="Left" Margin="19,168,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
-        <Button Background="Transparent" Foreground="White" Content="Gerenciar contas" HorizontalAlignment="Left" Margin="19,193,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White"/>
+        <Button Background="Transparent" Foreground="White" Content="Pedidos de tempo" HorizontalAlignment="Left" Margin="19,118,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White" Click="Button_PedidoDeTempo"/>
+        <Button Background="Transparent" Foreground="White" Content="Adcionar conta" HorizontalAlignment="Left" Margin="19,168,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White" Click="Button_AddConta"/>
+        <Button Background="Transparent" Foreground="White" Content="Gerenciar contas" HorizontalAlignment="Left" Margin="19,193,0,0" VerticalAlignment="Top" Width="120" BorderBrush="White" Click="Button_GerenciarConta"/>
         <Button Background="Transparent" Foreground="White" Content="Sair" HorizontalAlignment="Left" Margin="249,193,0,0" VerticalAlignment="Top" Width="75" BorderBrush="White" Click="Button_Sair"/>
         <Image HorizontalAlignment="Right" Height="100" Margin="0,10,18,0" VerticalAlignment="Top" Width="100"/>
     </Grid>
